# xgboost-interp

./: .gitignore  COMPLETE_ANALYSIS_GUIDE.md  CONTRIBUTING.md  INSTALL.md  LICENSE  MANIFEST.in  QUICKSTART.md  README.md  california_housing_xgb.json  demo_multiclass_analysis.py  iris_xgb.json  pyproject.toml  requirements.txt  run_examples.py  setup.py  test_package.py  test_sklearn_example.py
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: publish.yml  tests.yml
docs/guides/: getting-started.md  interactive-plots.md  model-analyzer.md  tree-analyzer.md
examples/criteo/criteo_data/: criteo_test_sample.parquet
examples/synthetic_imbalanced_classification/: SYNTHETIC_MODEL_README.md
housing_data/: housing_data.parquet
iris_data/: iris_data.parquet
tests/: test_examples.py  test_model_diff.py  test_unit.py
xgboost_interp/: __init__.py
xgboost_interp/core/: __init__.py  model_analyzer.py  model_diff.py  tree_analyzer.py
xgboost_interp/examples/: __init__.py  advanced_analysis.py  basic_analysis.py  california_housing_example.py  criteo_conversion_example.py  iris_classification_example.py  model_diffing_example.py  sklearn_dataset_example.py  synthetic_imbalanced_classification_example.py  user_model_complete_analysis.py  user_model_diff.py
xgboost_interp/plotting/: __init__.py  base_plotter.py  feature_plots.py  interactive_plots.py  tree_plots.py
xgboost_interp/utils/: __init__.py  analysis_tracker.py  data_utils.py  math_utils.py  metrics_utils.py  model_utils.py
