[project]
name = "xgboost-interp"
version = "0.1.0"
description = "A comprehensive toolkit for interpreting and analyzing XGBoost models"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "matplotlib>=3.3.0",
    "networkx>=2.5.0",
    "numpy>=1.19.0",
    "pandas>=1.2.0",
    "plotly>=5.0.0",
    "pyALE>=0.2.0",
    "pyarrow>=10.0.0",
    "scikit-learn>=0.24.0",
    "scipy>=1.6.0",
    "seaborn>=0.11.0",
    "shap>=0.40.0",
    "xgboost>=1.4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
